--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.68.0
-numpy==1.19.5
-pandas==1.3.3
-matplotlib==3.4.3
-scikit-learn==0.24.2
-tensorflow==2.6.0
+fastapi
+numpy
+pandas
+matplotlib
+scikit-learn
+tensorflow
+uvicorn
